Added code for Local AWS dynamo db and done with Admin Table

--- a/GarbItAPIService/GarbItAPIService/appsettings.json
+++ b/GarbItAPIService/GarbItAPIService/appsettings.json
@@ -10,6 +10,11 @@
   "AppSettings": {
 
   },
+  "AWS": {
+    "Profile": "default",
+    "Region": "ap-south-1",
+    "ServiceURL": "http://localhost:8000"
+  },
   "AWSDynamoDBSettings": {
 
   }
