--- a/GarbItAPIService/Providers/AWSDynamoDBProvider/AWSDynamoDBProvider.csproj
+++ b/GarbItAPIService/Providers/AWSDynamoDBProvider/AWSDynamoDBProvider.csproj
@@ -5,9 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Core" Version="3.5.1.52" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.5.4.8" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Contracts\Contracts.csproj" />
   </ItemGroup>
 
 </Project>
