AWS DB Scan Generic Implementation change

--- a/GarbItAPIService/GarbItAPIService/appsettings.json
+++ b/GarbItAPIService/GarbItAPIService/appsettings.json
@@ -16,6 +16,11 @@
     "ServiceURL": "http://localhost:8000"
   },
   "AWSDynamoDBSettings": {
-
+    "TableNames": {
+      "AdminTable": "admin-info",
+      "SuperAdminTable": "super-admin-info",
+      "EmployeeTable": "employee-info",
+      "IdGeneratorTable": "id-generator"
+    }
   }
 }
