--- a/GarbItAPIService/Providers/AWSDynamoDBProvider/AWSDynamoDBProvider.csproj
+++ b/GarbItAPIService/Providers/AWSDynamoDBProvider/AWSDynamoDBProvider.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
