Multiple code, session and login service added

--- a/GarbItAPIService/GarbItAPIService/GarbItAPIService.csproj
+++ b/GarbItAPIService/GarbItAPIService/GarbItAPIService.csproj
@@ -13,6 +13,7 @@
     <ProjectReference Include="..\Providers\AWSDynamoDBProvider\AWSDynamoDBProvider.csproj" />
     <ProjectReference Include="..\Services\AdminService\AdminService.csproj" />
     <ProjectReference Include="..\Services\EmployeeService\EmployeeService.csproj" />
+    <ProjectReference Include="..\Services\SessionService\SessionService.csproj" />
   </ItemGroup>
 
 
