--- a/GarbItAPIService/GarbItAPIService/appsettings.json
+++ b/GarbItAPIService/GarbItAPIService/appsettings.json
@@ -20,7 +20,9 @@
       "AdminTable": "admin-info",
       "SuperAdminTable": "super-admin-info",
       "EmployeeTable": "employee-info",
-      "IdGeneratorTable": "id-generator"
+      "IdGeneratorTable": "id-generator",
+      "PasswordRegistryTable": "password-registry",
+      "SessionTable": "session-info"
     }
   }
 }
