--- a/GarbItAPIService/GarbItAPIService/appsettings.json
+++ b/GarbItAPIService/GarbItAPIService/appsettings.json
@@ -12,8 +12,7 @@
   },
   "AWS": {
     "Profile": "default",
-    "Region": "ap-south-1",
-    "ServiceURL": "http://localhost:8000"
+    "Region": "ap-south-1"
   },
   "AWSDynamoDBSettings": {
     "TableNames": {
