Code refactored and restructured

--- a/GarbItAPIService/GarbItAPIService/appsettings.json
+++ b/GarbItAPIService/GarbItAPIService/appsettings.json
@@ -8,9 +8,10 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-
+    "AccessKey": "16797c9c-c80b-4df0-a263-5183ef2349a0"
   },
   "AWS": {
+    "ServiceURL": "http://localhost:8000",
     "Profile": "default",
     "Region": "ap-south-1"
   },
@@ -21,7 +22,16 @@
       "EmployeeTable": "employee-info",
       "IdGeneratorTable": "id-generator",
       "PasswordRegistryTable": "password-registry",
-      "SessionTable": "session-info"
+      "SessionTable": "session-info",
+      "ClientTable": "client-info",
+      "RecordEntryTable": "record-entry"
+    },
+    "NextIdGeneratorValue": {
+      "Admin": 1000,
+      "SuperAdmin": 1,
+      "Employee": 1000000,
+      "Client": 100000000,
+      "Record": 1
     }
   }
 }
