--- a/GarbItAPIService/GarbItAPIService/GarbItAPIService.csproj
+++ b/GarbItAPIService/GarbItAPIService/GarbItAPIService.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.9.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +18,7 @@
     <ProjectReference Include="..\Services\EmployeeService\EmployeeService.csproj" />
     <ProjectReference Include="..\Services\RecordEntryService\RecordEntryService.csproj" />
     <ProjectReference Include="..\Services\SessionService\SessionService.csproj" />
+    <ProjectReference Include="..\Services\SuperAdminService\SuperAdminService.csproj" />
   </ItemGroup>
 
 
