--- a/GarbItAPIService/Services/SuperAdminService/SuperAdminService.csproj
+++ b/GarbItAPIService/Services/SuperAdminService/SuperAdminService.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\..\Providers\AWSDynamoDBProvider\AWSDynamoDBProvider.csproj" />
   </ItemGroup>
 
 </Project>
