--- a/GarbItAPIService/GarbItAPIService/appsettings.json
+++ b/GarbItAPIService/GarbItAPIService/appsettings.json
@@ -24,14 +24,24 @@
       "PasswordRegistryTable": "password-registry",
       "SessionTable": "session-info",
       "ClientTable": "client-info",
-      "RecordEntryTable": "record-entry"
+      "RecordEntryTable": "record-entry",
+      "SecretQuestionsTable": "secret-questions"
     },
     "NextIdGeneratorValue": {
-      "Admin": 1000,
+      "Admin": 1,
       "SuperAdmin": 1,
-      "Employee": 1000000,
-      "Client": 100000000,
-      "Record": 1
+      "Employee": 1,
+      "Client": 1,
+      "Record": 1,
+      "SecretQuestion": 1
+    },
+    "UserIdPrefix": {
+      "Admin": "GIADM",
+      "SuperAdmin": "GISAD",
+      "Employee": "GIEMP",
+      "Client": "GICLN",
+      "Record": "GIRCD",
+      "SecretQuestion": "GISQN"
     }
   }
 }
