--- a/GarbItAPIService/GarbItAPIService/appsettings.json
+++ b/GarbItAPIService/GarbItAPIService/appsettings.json
@@ -11,7 +11,7 @@
     "AccessKey": "16797c9c-c80b-4df0-a263-5183ef2349a0"
   },
   "AWS": {
-    "ServiceURL": "http://localhost:8000",
+    //"ServiceURL": "http://localhost:8000",
     "Profile": "default",
     "Region": "ap-south-1"
   },
