Changed counter logic, Added new table to maintain count info.

--- a/GarbItAPIService/GarbItAPIService/appsettings.json
+++ b/GarbItAPIService/GarbItAPIService/appsettings.json
@@ -25,7 +25,8 @@
       "SessionTable": "session-info",
       "ClientTable": "client-info",
       "RecordEntryTable": "record-entry",
-      "SecretQuestionsTable": "secret-questions"
+      "SecretQuestionsTable": "secret-questions",
+      "CountsInfoTable": "count-info"
     },
     "NextIdGeneratorValue": {
       "Admin": 1,
