Migrated db to SqlLite

--- a/GarbItAPIService/GarbItAPIService/appsettings.json
+++ b/GarbItAPIService/GarbItAPIService/appsettings.json
@@ -15,18 +15,18 @@
     "Profile": "default",
     "Region": "ap-south-1"
   },
-  "AWSDynamoDBSettings": {
+  "DBSettings": {
     "TableNames": {
-      "AdminTable": "admin-info",
-      "SuperAdminTable": "super-admin-info",
-      "EmployeeTable": "employee-info",
-      "IdGeneratorTable": "id-generator",
-      "PasswordRegistryTable": "password-registry",
-      "SessionTable": "session-info",
-      "ClientTable": "client-info",
-      "RecordEntryTable": "record-entry",
-      "SecretQuestionsTable": "secret-questions",
-      "CountsInfoTable": "count-info"
+      "AdminTable": "AdminInfo",
+      "SuperAdminTable": "SuperAdminInfo",
+      "EmployeeTable": "EmployeeInfo",
+      "IdGeneratorTable": "IdGenerator",
+      "PasswordRegistryTable": "PasswordRegistry",
+      "SessionTable": "SessionInfo",
+      "ClientTable": "ClientInfo",
+      "RecordEntryTable": "ScannedRecordInfo",
+      "SecretQuestionsTable": "SecretQuestions",
+      "CountsInfoTable": "CountInfo"
     },
     "NextIdGeneratorValue": {
       "Admin": 1,
