--- a/GarbItAPIService/GarbItAPIService/GarbItAPIService.csproj
+++ b/GarbItAPIService/GarbItAPIService/GarbItAPIService.csproj
@@ -13,11 +13,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Contracts\Contracts.csproj" />
-    <ProjectReference Include="..\Providers\AWSDynamoDBProvider\AWSDynamoDBProvider.csproj" />
+    <ProjectReference Include="..\Providers\SqlLiteDBProvider\SQLiteDBProvider.csproj" />
     <ProjectReference Include="..\Services\AdminService\AdminService.csproj" />
     <ProjectReference Include="..\Services\ClientService\ClientService.csproj" />
     <ProjectReference Include="..\Services\EmployeeService\EmployeeService.csproj" />
-    <ProjectReference Include="..\Services\ForgotPasswordService\ForgotPasswordService.csproj" />
     <ProjectReference Include="..\Services\RecordEntryService\RecordEntryService.csproj" />
     <ProjectReference Include="..\Services\SessionService\SessionService.csproj" />
     <ProjectReference Include="..\Services\SuperAdminService\SuperAdminService.csproj" />
