Have multiple file Databases Corrected a foreach with addition of +1 to iteration i in SQLiteDataService.

--- a/GarbItAPIService/GarbItAPIService/appsettings.json
+++ b/GarbItAPIService/GarbItAPIService/appsettings.json
@@ -16,6 +16,11 @@
     "Region": "ap-south-1"
   },
   "DBSettings": {
+    "DatabaseLocation": {
+      "GarbitDatabase": "C:\\GarbITDatabases\\garb-it.db",
+      "SessionDatabase": "C:\\GarbITDatabases\\session-garbit.db",
+      "RecordEntryDatabase": "C:\\GarbITDatabases\\records-garb-it.db"
+    },
     "TableNames": {
       "AdminTable": "AdminInfo",
       "SuperAdminTable": "SuperAdminInfo",
