added empty database files

--- a/GarbItAPIService/GarbItAPIService/appsettings.json
+++ b/GarbItAPIService/GarbItAPIService/appsettings.json
@@ -18,7 +18,7 @@
   "DBSettings": {
     "DatabaseLocation": {
       "GarbitDatabase": "C:\\GarbITDatabases\\garb-it.db",
-      "SessionDatabase": "C:\\GarbITDatabases\\session-garbit.db",
+      "SessionDatabase": "C:\\GarbITDatabases\\session-garb-it.db",
       "RecordEntryDatabase": "C:\\GarbITDatabases\\records-garb-it.db"
     },
     "TableNames": {
